--- a/pages/cartas/combinados.html
+++ b/pages/cartas/combinados.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=1, initial-scale=1.0">
   <title>El Caiman Club</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../../css/carta.css">
@@ -48,10 +49,10 @@
       <a href="../shop.html" class="block text-pink-600 hover:text-pink-900 mb-2">Shop</a>
     </div>
   </header>
-<main>
-  <div class="container mx-auto p-8">
-    <div class="carta">
-      <div class="titulo-carta font-bold text-3xl neon-text">COMBINADOS</div>
+<main class="bg-black pt-20">
+  <div class="container mx-auto p-8 pt-20">
+    <div class="carta neon-bg">
+      <div class="titulo-carta font-bold text-xl neon-text">COMBINADOS</div>
       <!-- Categoría: Ginebras -->
       <div class="categoria">
         <div class="titulo-categoria">GINEBRAS</div>
