--- a/pages/carta.html
+++ b/pages/carta.html
@@ -74,40 +74,38 @@
     <a href="shop.html" class="block text-pink-600 hover:text-pink-900 mb-2">Shop</a>
   </div>
 </header>
-<main class="pt-24 flex flex-col min-h-screen bgimg-carta"> <!-- Agregue padding-top para compensar el header fijo -->
+<main class="pt-24 flex flex-col min-h-screen bgimg-carta">
   <!-- Contenido de la página -->
   <div class="container mx-auto flex-1 p-8 flex justify-center items-center">
 
     <!-- Contenedor de Categorías -->
     <div class="flex justify-center items-center flex-wrap gap-4">
-      <!-- Ajuste las clases aquí para pantallas grandes -->
-
       <!-- Categoría Combinados -->
-      <div class="block lg:w-40 lg:h-40 md:w-32 md:h-32 w-24 h-24 text-center mb-4 mx-2"> <!-- Añade margen en la parte inferior -->
+      <div class="block lg:w-40 lg:h-40 md:w-32 md:h-32 w-24 h-24 text-center mb-6 mx-2">
         <a href="cartas/combinados.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/combinado-neon.png" alt="Combinados" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="lg:text-xl md:text-base sm:text-xs text-xs font-semibold mt-2 md:block neon-text">Combinados</p>
+          <p class="lg:text-xl md:text-base sm:text-xs text-xs font-semibold mt-2 neon-text">Combinados</p>
         </a>
       </div>
 
       <!-- Categoría Cachimbas -->
-      <div class="block lg:w-40 lg:h-40 md:w-32 md:h-32 w-24 h-24 text-center mb-4 mx-2">
+      <div class="block lg:w-40 lg:h-40 md:w-32 md:h-32 w-24 h-24 text-center mb-6 mx-2">
         <a href="cartas/cachimbas.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/shisha-neon.png" alt="Cachimbas" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="lg:text-xl md:text-base sm:text-xs text-xs font-semibold mt-2 md:block neon-text">Cachimbas</p>
+          <p class="lg:text-xl md:text-base sm:text-xs text-xs font-semibold mt-2 neon-text">Cachimbas</p>
         </a>
       </div>
 
       <!-- Categoría Cócteles -->
-      <div class="block lg:w-40 lg:h-40 md:w-32 md:h-32 w-24 h-24 text-center mb-4 mx-2">
+      <div class="block lg:w-40 lg:h-40 md:w-32 md:h-32 w-24 h-24 text-center mb-6 mx-2">
         <a href="cartas/cocteles.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/coctel-neon.png" alt="Cócteles" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="lg:text-xl md:text-base sm:text-xs text-xs font-semibold mt-2 md:block neon-text">Cócteles</p>
+          <p class="lg:text-xl md:text-base sm:text-xs text-xs font-semibold mt-2 neon-text">Cócteles</p>
         </a>
       </div>
 
       <!-- Categoría Cervezas -->
-      <div class="block lg:w-40 lg:h-40 md:w-32 md:h-32 w-24 h-24 text-center mb-4 mx-2">
+      <div class="block lg:w-40 lg:h-40 md:w-32 md:h-32 w-24 h-24 text-center mb-6 mx-2">
         <a href="cartas/cervezas.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/cerveza-neon.png" alt="Cervezas" class="w-full h-full rounded-lg shadow object-cover">
           <p class="lg:text-xl md:text-base sm:text-xs text-xs font-semibold mt-2 md:block neon-text">Cervezas</p>
@@ -115,7 +113,7 @@
       </div>
 
       <!-- Categoría Vinos -->
-      <div class="block lg:w-40 lg:h-40 md:w-32 md:h-32 w-24 h-24 text-center mb-4 mx-2">
+      <div class="block lg:w-40 lg:h-40 md:w-32 md:h-32 w-24 h-24 text-center mb-6 mx-2">
         <a href="cartas/vinos.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/vino-neon.png" alt="Vinos" class="w-full h-full rounded-lg shadow object-cover">
           <p class="lg:text-xl md:text-base sm:text-xs text-xs font-semibold mt-2 md:block neon-text">Vinos</p>
@@ -123,7 +121,7 @@
       </div>
 
       <!-- Categoría Refrescos -->
-      <div class="block lg:w-40 lg:h-40 md:w-32 md:h-32 w-24 h-24 text-center mb-4 mx-2">
+      <div class="block lg:w-40 lg:h-40 md:w-32 md:h-32 w-24 h-24 text-center mb-6 mx-2">
         <a href="cartas/refrescos.html" class="focus-target" data-message="" data-image="" data-description=""><!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/refresco-neon.png" alt="Refrescos" class="w-full h-full rounded-lg shadow object-cover">
           <p class="lg:text-xl md:text-base sm:text-xs text-xs font-semibold mt-2 md:block neon-text">Refrescos</p>
@@ -131,7 +129,7 @@
       </div>
 
       <!-- Categoría Batidos -->
-      <div class="block lg:w-40 lg:h-40 md:w-32 md:h-32 w-24 h-24 text-center mb-4 mx-2">
+      <div class="block lg:w-40 lg:h-40 md:w-32 md:h-32 w-24 h-24 text-center mb-6 mx-2">
         <a href="cartas/batidos.html" class="focus-target" data-message="" data-image="" data-description=""><!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/batido-neon.png" alt="Batidos" class="w-full h-full rounded-lg shadow object-cover">
           <p class="lg:text-xl md:text-base sm:text-xs text-xs font-semibold mt-2 md:block neon-text">Batidos</p>
