Arreglados los menus de las cartas

--- a/pages/cartas/batidos.html
+++ b/pages/cartas/batidos.html
@@ -56,10 +56,9 @@
   </header>
   <main class="flex flex-col items-center justify-center h-screen">
     <div class="carta neon-bg">
-      <div class="titulo-carta"><b>BATIDOS</b></div>
-
+      <div class="titulo-carta neon-text"><b>BATIDOS</b></div>
       <div class="categoria">
-        <div class="producto lg:text-xl md:text-base sm:text-xs text-xs"><span class="contenido mr-16 ">Batido Chocolate</span> <span class="precio ml-10">5.00€</span></div>
+        <div class="producto lg:text-xl md:text-base sm:text-xs text-xs"><span class="contenido mr-16">Batido Chocolate</span> <span class="precio ml-10">5.00€</span></div>
         <div class="producto lg:text-xl md:text-base sm:text-xs text-xs"><span class="contenido mr-16">Batido Vainilla</span> <span class="precio ml-10">5.00€</span></div>
         <div class="producto lg:text-xl md:text-base sm:text-xs text-xs"><span class="contenido mr-16">Batido Fresa</span> <span class="precio ml-10">5.00€</span></div>
         <div class="producto lg:text-xl md:text-base sm:text-xs text-xs"><span class="contenido mr-16">Batido de Kit-Kat</span> <span class="precio ml-10">6.00€</span></div>
