--- a/pages/cartas/cachimbas.html
+++ b/pages/cartas/cachimbas.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../../css/carta.css">
+  <link rel="stylesheet" href="../../css/style.css">
   <title>El Caiman Club</title>
 </head>
 <body class=" bg-gray-200">
@@ -49,10 +50,10 @@
   </div>
 </header>
 
-<main>
+<main class="bg-black">
   <div class="container mx-auto p-8">
-    <div class="carta">
-      <div class="titulo-carta"><b>SHISHAS</b></div>
+    <div class="carta neon-bg">
+      <div class="titulo-carta neon-text">SHISHAS</div>
 
       <div class="categoria">
         <div class="titulo-categoria">Shisha Tradicional - 10€</div>
@@ -100,6 +101,16 @@
 
     </div>
   </div>
+  <div class="flex justify-center pb-8"> 
+    <a href="../carta.html">
+        <button type="button" class="lg:text-2xl md:text-base sm:text-xs text-xs text-white bg-gradient-to-r from-pink-400 via-pink-500 to-pink-600 
+      hover:from-pink-600 hover:via-pink-500 hover:to-pink-400 focus:ring-4 
+      focus:outline-none focus:ring-pink-300 dark:focus:ring-pink-800 shadow-lg shadow-pink-500/50 
+      dark:shadow-lg dark:shadow-pink-800/80 font-medium rounded-lg text-sm px-5 py-2.5 mt-8">
+          Volver a la carta
+        </button>
+      </a>
+    </div> 
 </main>
 
 <script src="../../js/script.js"></script>
