--- a/pages/cartas/combinados.html
+++ b/pages/cartas/combinados.html
@@ -119,6 +119,16 @@
       <div><b>*Combinado con bebida energética + 1€</b></div>
     </div>
   </div>
+  <div class="flex justify-center pb-8"> 
+  <a href="../carta.html">
+      <button type="button" class="lg:text-2xl md:text-base sm:text-xs text-xs text-white bg-gradient-to-r from-pink-400 via-pink-500 to-pink-600 
+    hover:from-pink-600 hover:via-pink-500 hover:to-pink-400 focus:ring-4 
+    focus:outline-none focus:ring-pink-300 dark:focus:ring-pink-800 shadow-lg shadow-pink-500/50 
+    dark:shadow-lg dark:shadow-pink-800/80 font-medium rounded-lg text-sm px-5 py-2.5 mt-8">
+        Volver a la carta
+      </button>
+    </a>
+  </div> 
 </main>
 
 <script src="../../js/script.js"></script>
