--- a/pages/cartas/refrescos.html
+++ b/pages/cartas/refrescos.html
@@ -59,14 +59,14 @@
       <div class="titulo-carta neon-text"><b>REFRESCOS</b></div>
 
     <div class="categoria">
-      <div class="producto lg:text-xl md:text-base sm:text-xs text-xs"><span class="contenido mr-16">Coca-cola</span> <span class="precio">2,80€</span></div>
-      <div class="producto lg:text-xl md:text-base sm:text-xs text-xs"><span class="contenido mr-16">Schweppe Limon</span> <span class="precio">2,80€</span></div>
-      <div class="producto lg:text-xl md:text-base sm:text-xs text-xs"><span class="contenido mr-16">Schweppe Naranja</span> <span class="precio">2,80€</span></div>
-      <div class="producto lg:text-xl md:text-base sm:text-xs text-xs"><span class="contenido mr-16">SevenUp</span> <span class="precio">2,80€</span></div>
-      <div class="producto lg:text-xl md:text-base sm:text-xs text-xs"><span class="contenido mr-16">Tonica</span> <span class="precio">2,80€</span></div>
-      <div class="producto lg:text-xl md:text-base sm:text-xs text-xs"><span class="contenido mr-16">Aquarius</span> <span class="precio">2,80€</span></div>
-      <div class="producto lg:text-xl md:text-base sm:text-xs text-xs"><span class="contenido mr-16">Zumos</span> <span class="precio">2,30€</span></div>
-      <div class="producto lg:text-xl md:text-base sm:text-xs text-xs"><span class="contenido mr-16">Agua</span> <span class="precio">1,30€</span></div>
+      <div class="producto lg:text-xl md:text-base sm:text-xs text-xs"><span class="contenido mr-16">Coca-cola</span> <span class="precio">2.80€</span></div>
+      <div class="producto lg:text-xl md:text-base sm:text-xs text-xs"><span class="contenido mr-16">Schweppe's Limon</span> <span class="precio">2.80€</span></div>
+      <div class="producto lg:text-xl md:text-base sm:text-xs text-xs"><span class="contenido mr-16">Schweppe's Naranja</span> <span class="precio">2.80€</span></div>
+      <div class="producto lg:text-xl md:text-base sm:text-xs text-xs"><span class="contenido mr-16">Seven Up</span> <span class="precio">2.80€</span></div>
+      <div class="producto lg:text-xl md:text-base sm:text-xs text-xs"><span class="contenido mr-16">Schweppe's Tonica</span> <span class="precio">2.80€</span></div>
+      <div class="producto lg:text-xl md:text-base sm:text-xs text-xs"><span class="contenido mr-16">Aquarius</span> <span class="precio">2.80€</span></div>
+      <div class="producto lg:text-xl md:text-base sm:text-xs text-xs"><span class="contenido mr-16">Zumos</span> <span class="precio">2.30€</span></div>
+      <div class="producto lg:text-xl md:text-base sm:text-xs text-xs"><span class="contenido mr-16">Agua</span> <span class="precio">1.30€</span></div>
     </div>
   </div>
   <a href="../carta.html">
