--- a/pages/ofertas.html
+++ b/pages/ofertas.html
@@ -52,37 +52,37 @@
 
 <main class="pt-20">
   <div class="p-6 m-4 text-white text-center">
-    <h2 class="text-pink-500 text-3xl lg:text-4xl font-bold mb-3">Ofertas Exclusivas y Eventos Inolvidables</h2>
+    <h2 class="text-pink-500 text-3xl lg:text-4xl font-bold mb-3 neon-text">Ofertas Exclusivas y Eventos Inolvidables</h2>
     <p class="text-xl">Descubre nuestras promociones especiales y vive noches llenas de diversión y sabor en El Caimán Club.</p>
   </div>
 
 
   <!-- Contenedor de ofertas con espaciado uniforme en todos los tamaños de pantalla -->
   <div class="grid grid-cols-1 lg:grid-cols-2 xl:grid-cols-4 gap-8 mx-4">
-    <div class="bg-black text-white p-4 rounded-lg neon-bg">
+    <div class="bg-white text-black p-4 rounded-lg neon-bg">
       <div class="p-5 text-center">
-        <h2 class="titulo-oferta neon-text">COPAS a 5€ TODO NOVIEMBRE</h2>
+        <h1 class="titulo-oferta neon-text font-bold">COPAS a 5€ TODO NOVIEMBRE</h1>
         <img alt="Copas a 5€" class="w-full h-auto" src="ruta/a/imagen-de-copas.jpg">
         <p class="text-pink-600">Disfruta de nuestras copas a un precio especial durante todo noviembre.</p>
       </div>
     </div>
 
-    <div class="bg-black text-white p-4 rounded-lg neon-bg">
-      <h2 class="titulo-oferta neon-text">4 TERCIOS ALHAMBRA 10€</h2>
+    <div class="bg-white text-black p-4 rounded-lg neon-bg">
+      <h2 class="titulo-oferta neon-text font-bold">4 TERCIOS ALHAMBRA 10€</h2>
       <img alt="Tercios Alhambra" class="w-full h-auto" src="ruta/a/imagen-de-cervezas.jpg">
       <p class="text-pink-600">Aprovecha nuestra oferta en cervezas Alhambra, perfectas para compartir.</p>
     </div>
 
 
-    <div class="bg-black text-white p-4 rounded-lg neon-bg">
-      <h2 class="titulo-oferta neon-text">CON 4 COCTELES, SHISHAS AL 50%</h2>
+    <div class="bg-white text-black p-4 rounded-lg neon-bg">
+      <h2 class="titulo-oferta neon-text font-bold">CON 4 COCTELES, SHISHAS AL 50%</h2>
       <img alt="Cocteles y Shishas" class="w-full h-auto" src="ruta/a/imagen-de-cocteles.jpg">
       <p class="text-pink-600">Disfruta la mitad de precio en todas las shishas al pedir 4 cócteles.</p>
     </div>
 
 
-    <div class="bg-black text-white p-4 rounded-lg neon-bg">
-      <h2 class="titulo-oferta neon-text">AMPLIA VARIEDAD DE SHISHAS Y CERVEZAS</h2>
+    <div class="bg-white text-black p-4 rounded-lg neon-bg">
+      <h2 class="titulo-oferta neon-text font-bold">AMPLIA VARIEDAD DE SHISHAS Y CERVEZAS</h2>
       <img alt="Variedad de Shishas y Cervezas" class="w-full h-auto" src="ruta/a/imagen-de-shishas.jpg">
       <p class="text-pink-600">Explora más de 25 sabores de shishas y más de 10 tipos de cervezas.</p>
     </div>
