memoria y carrusel de eventos

--- a/pages/ofertas.html
+++ b/pages/ofertas.html
@@ -58,6 +58,26 @@
       Club.</p>
   </div>
 
+  <div class="swiper-container p-20">
+    <!-- Wrapper for slides -->
+    <div class="swiper-wrapper">
+      <div class="swiper-slide"><img src="../src/img/ofertas/halloween.jpg" alt="Imagen 1"></div>
+      <div class="swiper-slide"><img src="../src/img/ofertas/navidades.jpg " alt="Imagen 2"></div>
+      <div class="swiper-slide"><img src="../src/img/ofertas/halloween.jpg" alt="Imagen 3"></div>
+      <div class="swiper-slide"><img src="../src/img/ofertas/navidades.jpg " alt="Imagen 4"></div>
+
+      <!-- ... otros slides ... -->
+    </div>
+    </div>
+    <!-- Si necesitas paginación -->
+    <div class="swiper-pagination"></div>
+
+    <!-- Si necesitas botones de navegación -->
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
+
+  </div>
+
 
   <!-- Contenedor de ofertas con espaciado uniforme en todos los tamaños de pantalla -->
   <div class="grid grid-cols-1 lg:grid-cols-2 xl:grid-cols-4 gap-8 mx-4">
