--- a/pages/ofertas.html
+++ b/pages/ofertas.html
@@ -65,22 +65,20 @@
       <div class="swiper-slide"><img src="../src/img/ofertas/navidades.jpg " alt="Imagen 2"></div>
       <div class="swiper-slide"><img src="../src/img/ofertas/halloween.jpg" alt="Imagen 3"></div>
       <div class="swiper-slide"><img src="../src/img/ofertas/navidades.jpg " alt="Imagen 4"></div>
+      <div class="swiper-slide"><img src="../src/img/ofertas/halloween.jpg" alt="Imagen 5"></div>
 
       <!-- ... otros slides ... -->
     </div>
-    </div>
-    <!-- Si necesitas paginación -->
-    <div class="swiper-pagination"></div>
 
-    <!-- Si necesitas botones de navegación -->
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-button-next"></div>
+    <!-- Botones de navegación -->
+    <div class="swiper-button-prev neon-text"></div>
+    <div class="swiper-button-next neon-text"></div>
 
   </div>
 
 
   <!-- Contenedor de ofertas con espaciado uniforme en todos los tamaños de pantalla -->
-  <div class="grid grid-cols-1 lg:grid-cols-2 xl:grid-cols-4 gap-8 mx-4">
+  <div class="grid grid-cols-1 lg:grid-cols-2 xl:grid-cols-4 gap-8 mx-4 mb-10">
 
     <div class="bg-white p-4 text-black rounded-lg neon-bg">
       <div class="p-5 text-center">
